Adds old doitintl BQ plugins to list of datasources to delete
These were replaced by a native Grafana BigQuery datasource plugin.

--- a/config/federation/grafana/provisioning/datasources/deleted.yml
+++ b/config/federation/grafana/provisioning/datasources/deleted.yml
@@ -29,3 +29,12 @@ deleteDatasources:
     orgId: 1
   - name: Data Processing (mlab-sandbox)
     orgId: 1
+
+# The old doitintl BigQuery datasources, which were replaced by native Grafana
+# BigQuery plugins.
+  - name: BigQuery (mlab-oti)
+    orgId: 1
+  - name: BigQuery (mlab-staging)
+    orgId: 1
+  - name: BigQuery (mlab-sandbox)
+    orgId: 1
