--- a/config/federation/grafana/provisioning/datasources/config.yml
+++ b/config/federation/grafana/provisioning/datasources/config.yml
@@ -4,3 +4,13 @@ apiVersion: 1
 # It takes no effect if data sources are already listed in the deleteDatasources section.
 prune: true
 
+deleteDatasources:
+- name: BigQuery (mlab-oti)
+  orgId: 1
+- name: BigQuery (mlab-staging)
+  orgId: 1
+- name: BigQuery (mlab-sandbox)
+  orgId: 1
+- name: Google BigQuery (mlab-ns)
+  orgId: 1
+
