Temporarily enable login form

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -15,7 +15,7 @@ auto_assign_org_role = Viewer
 
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-disable_login_form = true
+#disable_login_form = true
 
 [auth.basic]
 enabled = false
