Monitor matching sidecar data

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -24,6 +24,7 @@ spec:
                 "-gauge-query=/queries/bq_daily_tests.sql",
                 "-gauge-query=/queries/bq_server.sql",
                 "-gauge-query=/queries/bq_billing.sql",
+                "-gauge-query=/queries/bq_sidecar.sql",
               ]
         ports:
         - containerPort: 9348
