--- a/k8s/prometheus-federation/deployments/bigquery-exporter-24h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-24h.yml
@@ -22,6 +22,7 @@ spec:
                 "-gauge-query=/queries/bq_gardener_parse_time.sql",
                 "-gauge-query=/queries/bq_gardener.sql",
                 "-gauge-query=/queries/bq_gardener_historical.sql",
+                "-gauge-query=/queries/bq_sidecar.sql",
               ]
         ports:
         - containerPort: 9348
