Temporarily disable auth.proxy for Grafana

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -21,7 +21,7 @@ auto_assign_org_role = Viewer
 enabled = false
 
 [auth.proxy]
-enabled = true
+enabled = false
 header_name = X-Email
 header_property = email
 auto_sign_up = true
