Re-disabled login form, and re-enables auth.proxy

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -15,13 +15,13 @@ auto_assign_org_role = Viewer
 
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-#disable_login_form = true
+disable_login_form = true
 
 [auth.basic]
 enabled = false
 
 [auth.proxy]
-enabled = false
+enabled = true
 header_name = X-Email
 header_property = email
 auto_sign_up = true
