--- a/k8s/prometheus-federation/mlab-sandbox.yml
+++ b/k8s/prometheus-federation/mlab-sandbox.yml
@@ -2,6 +2,7 @@
 
 GCLOUD_PROJECT: mlab-sandbox
 LOCATE_PROJECT: mlab-sandbox
+AUTOJOIN_PROJECT: mlab-sandbox
 PROMETHEUS_VOLUME_SIZE: 500Gi
 EXTERNAL_IP: 35.184.166.181
 GITHUB_RECEIVER_INMEMORY: true
