--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -131,6 +131,7 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/bmc-targets/bmc_e2e.json",
                 "--http-target=/targets/switch-monitoring-targets/switch-monitoring.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/switch-monitoring-targets/switch-monitoring.json",
+                # TODO(soltesz): remove byos configuration in favor of separate deployment dedicated to autojoin platform & pipeline.
                 "--http-target=/targets/byos-nodes/byos-nodes.json",
                 "--http-source=https://autojoin-dot-{{AUTOJOIN_PROJECT}}.appspot.com/autojoin/v0/node/list?format=prometheus",
                 "--project={{GCLOUD_PROJECT}}",
