--- a/k8s/cluster/deployments/oauth2-proxy.yml
+++ b/k8s/cluster/deployments/oauth2-proxy.yml
@@ -24,7 +24,7 @@ spec:
         - --cookie-secret={{OAUTH_PROXY_COOKIE_SECRET}}
         - --github-org=m-lab
         - --email-domain=*
-        - --redirect-url=https://prometheus-data-pipeline.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/callback
+        - --redirect-url=https://prometheus-{{CLUSTER}}.{{GCLOUD_PROJECT}}.measurementlab.net/oauth2/callback
         - --set-xauthrequest=true
         - --whitelist-domain=.measurementlab.net
         image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
