--- a/k8s/cluster/services/prometheus-ingress.yml
+++ b/k8s/cluster/services/prometheus-ingress.yml
@@ -12,10 +12,10 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - prometheus-data-pipeline.{{GCLOUD_PROJECT}}.measurementlab.net
+    - prometheus-{{CLUSTER}}.{{GCLOUD_PROJECT}}.measurementlab.net
     secretName: prometheus-tls-oauth
   rules:
-  - host: prometheus-data-pipeline.{{GCLOUD_PROJECT}}.measurementlab.net
+  - host: prometheus-{{CLUSTER}}.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
       - path: /oauth2
@@ -47,10 +47,10 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - prometheus-data-pipeline.{{GCLOUD_PROJECT}}.measurementlab.net
+    - prometheus-{{CLUSTER}}.{{GCLOUD_PROJECT}}.measurementlab.net
     secretName: prometheus-tls
   rules:
-  - host: prometheus-data-pipeline.{{GCLOUD_PROJECT}}.measurementlab.net
+  - host: prometheus-{{CLUSTER}}.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
       - path: /
