--- a/k8s/data-pipeline/deployments/prometheus.yml
+++ b/k8s/data-pipeline/deployments/prometheus.yml
@@ -42,7 +42,7 @@ spec:
       # use by prometheus. See README for steps to create a GKE cluster for
       # prometheus.
       nodeSelector:
-        prometheus-node: 'true'
+        monitoring-node: 'true'
 
       # When prometheus receives SIGTERM, it begins a new checkpoint. This can
       # take longer than the default grace period of 30s.
