--- a/k8s/cluster/deployments/kube-state-metrics.yml
+++ b/k8s/cluster/deployments/kube-state-metrics.yml
@@ -15,7 +15,7 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       nodeSelector:
-        prometheus-node: 'true'
+        monitoring-node: 'true'
       containers:
       - name: kube-state-metrics
         image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.9.2
