--- a/k8s/autojoin/deployments/prometheus.yml
+++ b/k8s/autojoin/deployments/prometheus.yml
@@ -51,7 +51,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v2.31.1
+      - image: prom/prometheus:v2.53.1
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -80,9 +80,27 @@ spec:
         - mountPath: /legacy-targets
           name: prometheus-storage
           subPath: legacy-targets
+        # /byos-nodes
+        - mountPath: /byos-nodes
+          name: prometheus-storage
+          subPath: byos-nodes
         # /etc/prometheus/prometheus.yml contains the M-Lab Prometheus config.
         - mountPath: /etc/prometheus
           name: prometheus-config
+
+      - image: measurementlab/gcp-service-discovery:v1.5.1
+        name: service-discovery
+        args: [ "--http-target=/targets/byos-nodes/byos-nodes.json",
+                "--http-source=https://autojoin-dot-{{GCLOUD_PROJECT}}.appspot.com/autojoin/v0/node/list?format=prometheus",
+                "--project={{GCLOUD_PROJECT}}",
+                "--prometheusx.listen-address=:9373"]
+        ports:
+          - containerPort: 9373
+        volumeMounts:
+        # Mount the the prometheus-storage for write access to the target
+        # directories.
+        - mountPath: /targets
+          name: prometheus-storage
 
       # Check https://hub.docker.com/r/jimmidyson/configmap-reload/tags/ for the current
       # stable version.
