gke scrape annotation

--- a/k8s/autojoin/services/prometheus-basic.yml
+++ b/k8s/autojoin/services/prometheus-basic.yml
@@ -10,6 +10,7 @@ metadata:
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
+    gke-prometheus-federation/scrape: "true"
 spec:
   ingressClassName: nginx
   tls:
