Add label to prometheus

--- a/k8s/autojoin/deployments/prometheus.yml
+++ b/k8s/autojoin/deployments/prometheus.yml
@@ -25,6 +25,7 @@ spec:
         # Tell prometheus service discovery to scrape the node-exporter running
         # within the prometheus-server pod.
         prometheus.io/scrape: 'true'
+        gke-prometheus-federation/scrape: "true"
     spec:
       # TODO: remove this directive after deployment to prod.
       initContainers:
