Remove protocol flag

--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -12,5 +12,5 @@ scripts:
     script: >
       EXPERIMENT=ndt7 cache_exit_code.sh 3600
       monitoring-token -machine=${TARGET} -service=ndt/ndt7 -service-url --env-name SERVICE_URL -service-url-key-name wss:///ndt/v7/download --
-      ndt7-client -protocol=ndt7+wss
+      ndt7-client
     timeout: 50
