--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -8,3 +8,9 @@ scripts:
       monitoring-token -machine=${TARGET} -service=wehe/replay --
       wehe-client.sh -n applemusic -t wehe-cmdline/res/ -c
     timeout: 50
+  - name: 'ndt7_client'
+    script: >
+      EXPERIMENT=ndt7 cache_exit_code.sh 3600
+      monitoring-token -machine=${TARGET} -service=ndt/ndt7 -service-url --env-name SERVICE_URL -service-url-key-name wss:///ndt/v7/download --
+      ndt7-client
+    timeout: 50
