--- a/config/federation/script-exporter/script_exporter.yml
+++ b/config/federation/script-exporter/script_exporter.yml
@@ -6,8 +6,8 @@ scripts:
     script: >
       EXPERIMENT=wehe cache_exit_code.sh 600
       monitoring-token -machine=${TARGET} -service=wehe/replay --
-      wehe-client.sh -n applemusic -t wehe-cmdline/res/ -c
-    timeout: 55
+      wehe-client.sh -n amazon -t wehe-cmdline/res/ -c
+    timeout: 50
   - name: 'ndt7_client'
     script: >
       EXPERIMENT=ndt7 cache_exit_code.sh 3600
