Adds an alert when an M-Lab autojoined DNS is about to expire
This new alert should fire about 10 days in advance of the Autojoin system
removing DNS entries for an M-Lab-managed VM. This should give operators plenty
of time to find out why the machine hasn't registered with Autojoin for more
than 4 day. By the time 4 days goes by we should have already long received
alerts for nodes or pods down on the machine.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1377,3 +1377,22 @@ groups:
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#billing_dailygceincrease
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/a5mC51ZMk/gcp-billing?orgId=1&refresh=5m
 
+# A DNS record for an M-Lab autojoined machine is too close to expiring. The
+# Autojoin system will delete a DNS record for an autojoin client if it hasn't
+# heard from that client more than 14d. Autojoin clients are supposed to
+# checkin every hour. This alert conservatively allows an M-Lab autojoined
+# machine to not checkin for 4 days before firing.
+  - alert: AutojoinDNSRecordTooCloseToExpiring
+    expr: |
+      ((autojoin_dns_expiration - time()) / 86400) < 10
+        unless on(machine) gmx_machine_maintenance == 1
+    for: 10m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: A DNS record for an Autojoin machine is too close to expiring
+      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#autojoindnsrecordtooclosetoexpiring
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/abcdef37wdji8d/autojoin?orgId=1
+
