Only fires DNS alert when E2E tests are working

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1381,11 +1381,16 @@ groups:
 # Autojoin system will delete a DNS record for an autojoin client if it hasn't
 # heard from that client more than 14d. Autojoin clients are supposed to
 # checkin every hour. This alert conservatively allows an M-Lab autojoined
-# machine to not checkin for 4 days before firing.
+# machine to not checkin for 4 days before firing. Since this alert is only
+# meant to uncover issues with the Autojoin client successfully registering, or
+# some bug in the Autojoin API where client registrations are not properly
+# updated in Memorystore, we only trigger this alert when script_exporter E2E
+# tests are succeeding. If E2E test are failing, then there is some other issue
+# and k8s alerts should cover them.
   - alert: AutojoinDNSRecordTooCloseToExpiring
     expr: |
       ((autojoin_dns_expiration - time()) / 86400) < 10
-        unless on(machine) gmx_machine_maintenance == 1
+        unless on(fqdn) script_success == 0
     for: 10m
     labels:
       repo: ops-tracker
