Adds new per-project GCP billing bq_exporter 3h query
The metrics produced by this new query can be used to alert on project billing.
For example, if billing for the past 3 days for a given project is more than,
say, 50% higher than the previous month's average daily cost an alert could
fire.

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -23,6 +23,7 @@ spec:
                 "-gauge-query=/queries/bq_daily_archive.sql",
                 "-gauge-query=/queries/bq_daily_tests.sql",
                 "-gauge-query=/queries/bq_billing.sql",
+                "-gauge-query=/queries/bq_billing_per_project.sql",
               ]
         ports:
         - containerPort: 9348
