--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,8 @@ availableSecrets:
   secretManager:
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-alertmanager-slack-channel-url/versions/latest
     env: AM_SLACK_CHANNEL_URL
+  - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-alertmanager-basic-auth-secret/versions/latest
+    env: AM_BASIC_AUTH_SECRET
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-grafana-client-secret-name/versions/latest
     env: GF_AUTH_GOOGLE_CLIENT_SECRET
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-grafana-client-id-name/versions/latest
@@ -60,6 +62,7 @@ steps:
   - 'PROM_VERSION=2.37.0'
   secretEnv:
   - AM_SLACK_CHANNEL_URL
+  - AM_BASIC_AUTH_SECRET
   - GF_AUTH_GOOGLE_CLIENT_SECRET
   - GF_AUTH_GOOGLE_CLIENT_ID
   - GITHUB_RECEIVER_AUTH_TOKEN
@@ -92,6 +95,7 @@ steps:
     # "steps" and "images". Here we take the secret values and assign them to
     # variables that apply-global-prometheus.sh expects.
     export AM_SLACK_CHANNEL_URL_$${PROJECT/-/_}=$$AM_SLACK_CHANNEL_URL
+    export AM_BASIC_AUTH_SECRET
     export GF_AUTH_GOOGLE_CLIENT_SECRET_$${PROJECT/-/_}=$$GF_AUTH_GOOGLE_CLIENT_SECRET
     export GF_AUTH_GOOGLE_CLIENT_ID_$${PROJECT/-/_}=$$GF_AUTH_GOOGLE_CLIENT_ID
     export OAUTH_PROXY_CLIENT_ID_$${PROJECT/-/_}=$$OAUTH_PROXY_CLIENT_ID
