Adds missing comma to autojoin prometheus manifest

--- a/k8s/autojoin/deployments/prometheus.yml
+++ b/k8s/autojoin/deployments/prometheus.yml
@@ -96,7 +96,7 @@ spec:
         name: service-discovery
         args: [ "--http-target=/targets/byos-nodes/byos-nodes.json",
                 "--http-source=https://autojoin-dot-{{GCLOUD_PROJECT}}.appspot.com/autojoin/v0/node/list?format=prometheus",
-                "--aef-target=/targets/aeflex-targets/aeflex.json"
+                "--aef-target=/targets/aeflex-targets/aeflex.json",
                 "--project={{GCLOUD_PROJECT}}",
                 "--prometheusx.listen-address=:9373"]
         ports:
