--- a/k8s/autojoin/deployments/prometheus.yml
+++ b/k8s/autojoin/deployments/prometheus.yml
@@ -91,6 +91,9 @@ spec:
         # /etc/prometheus/prometheus.yml contains the M-Lab Prometheus config.
         - mountPath: /etc/prometheus
           name: prometheus-config
+        # prometheus-federation Alertmanager basic auth credentials
+        - mountPath: /etc/alertmanager/
+          name: alertmanager-basicauth
 
       - image: measurementlab/gcp-service-discovery:v1.5.1
         name: service-discovery
@@ -124,8 +127,6 @@ spec:
         # Mount the prometheus config volume so we can watch it for changes.
         - mountPath: /prometheus-config
           name: prometheus-config
-        - mountPath: /etc/alertmanager/
-          name: alertmanager-basicauth
 
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
